<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:background="@drawable/bck" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/TextDivLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="3dp"
            android:hint="@string/name">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="3dp"
            android:hint="@string/bits_email_id"
            android:inputType="textEmailAddress" />
		
        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="3dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="3dp"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword" />
        
        <EditText
            android:id="@+id/phone_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="3dp"
            android:hint="@string/your_phone_number"
            android:inputType="phone" />
		<EditText
            android:id="@+id/HostelEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="3dp"
            android:hint="@string/hostel"
             />
		<EditText
            android:id="@+id/roomNoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="3dp"
            android:hint="@string/room_no"
            android:inputType="number" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/ButtonsDivLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextDivLL"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/RegisterBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/register"
            android:onClick="ButtonOnClick" />

        <Button
            android:id="@+id/ClearBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/clear" 
            android:onClick="ButtonOnClick"/>
    </LinearLayout>
</RelativeLayout>
</ScrollView>