<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bck">
    
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

     <EditText
         android:id="@+id/email_log"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="@string/bits_email_id"
         android:inputType="textAutoComplete|textEmailAddress" >

        <requestFocus />
     </EditText>

    <EditText
        android:id="@+id/passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/email_log"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" >
        
    </EditText>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_below="@id/passwd"
     android:layout_marginTop="20dp"
     android:gravity="center_horizontal"
     android:orientation="vertical" >

     <Button
         android:id="@+id/LoginBut"
         android:layout_width="264dp"
         android:layout_height="wrap_content"
         android:text="@string/loginBut" />

     <CheckBox
         android:id="@+id/rememberChe"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Remember Me"
         android:gravity="center"
         android:layout_marginTop="20dp" />
     

     <TextView
         android:id="@+id/NotRegTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:padding="5dp"
         android:text="@string/not_registered_yet"
         android:textSize="18dp"
         android:textColor="#000000" />

 </LinearLayout>

</RelativeLayout>
</ScrollView>